
5.45  2014-09-26
  - Deprecated Mojolicious::Routes::Route::has_conditions.
  - Added extracting attribute to Mojo::UserAgent::CookieJar.
  - Improved performance of next, next_sibling, previous and previous_sibling
    methods in Mojo::DOM significantly.
  - Improved Mojo::Cache to allow caching to be disabled. (mvgrimes, sri)

5.44  2014-09-23
  - Fixed bug in Mojolicious::Renderer that prevented proxy objects from being
    reused.

5.43  2014-09-22
  - Updated Makefile.PL for version 2 of the CPAN distribution metadata
    specification.
  - Improved get command to not depend on Content-Type headers for
    differentiating between JSON and HTML/XML.

5.42  2014-09-17
  - Fixed url_for bug where an unnecessary slash could be rendered before
    formats.

5.41  2014-09-13
  - Deprecated Mojolicious::Controller::render_static in favor of
    reply->static helper.
  - Added mtime attribute to Mojo::Asset::Memory.
  - Added mtime method to Mojo::Asset and Mojo::Asset::File.
  - Added reply->asset and reply->static helpers to
    Mojolicious::Plugin::DefaultHelpers.
  - Fixed bug in Mojo::UserAgent where connections would sometimes not get
    closed correctly.

5.40  2014-09-12
  - Deprecated Mojo::EventEmitter::emit_safe.
  - Added reply->exception and reply->not_found helpers to
    Mojolicious::Plugin::DefaultHelpers.
  - Improved all events to handle exceptions the same.

5.39  2014-09-07
  - Improved decamelize performance.
  - Fixed bug in Mojo::Template where newline characters could get lost.

5.38  2014-09-05
  - Improved routes command to use new terminology for flags.
  - Fixed bug in Mojo::Util where tablify could not handle empty columns.

5.37  2014-09-03
  - Improved Mojo::Template performance slightly.
  - Fixed .ep template bug where the stash value "c" could no longer be used.

5.36  2014-09-02
  - Improved Mojo::Template performance.

5.35  2014-08-30
  - Improved monkey_patch to be able to name generated functions.

5.34  2014-08-29